# clox

./: .gitignore  README.md
interpreter/: .gitignore  Makefile  README.md  config.h  configure.ac  interpreter.c  interpreterState.c  interpreterState.h  token.c
interpreter/src/: Makefile.am  error.c  error.h  interpreter  interpreter.c  interpreterState.c  interpreterState.h  linkedlist.c  linkedlist.h  scanner.c  scanner.h  token.c  token.h
interpreter/tests/: Makefile.am  check_linkedlist.c  check_scanner.c  check_token.c
test_files/: invalid_file  syntactically_invalid_file
